[tool.poetry]
name = "pywordle"
version = "0.1.0"
description = "A python clone of Wordle"
authors = ["Gerald <gerald.lau.95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
xtermcolor = "^1.3"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
